--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.CS501App"
+        android:configChanges="keyboardHidden|orientation"
         tools:targetApi="31">
         <activity
             android:name=".assignment2.Calc2Activity"
