--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.6.1'
 
     implementation platform("androidx.compose:compose-bom:2022.12.00")
+    androidTestImplementation platform("androidx.compose:compose-bom:2022.12.00")
     implementation("androidx.compose.material3:material3")
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui"
