--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS501App"
         tools:targetApi="31">
+        <activity android:name=".example.PictureExample"
+            android:exported="true"/>
         <activity
             android:name=".assignment4.boggle.BoggleActivity"
             android:exported="false" />
