--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.activity:activity-ktx:1.6.1'
-
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation platform("androidx.compose:compose-bom:2022.12.00")
     androidTestImplementation platform("androidx.compose:compose-bom:2022.12.00")
     implementation("androidx.compose.material3:material3")
