--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,5 @@ dependencies {
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
-
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
 }
