--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS501App"
         tools:targetApi="31">
-        <activity android:name=".example.PictureExample"
-            android:exported="true"/>
+        <activity
+            android:name=".example.PictureExample"
+            android:exported="true" />
         <activity
             android:name=".assignment4.boggle.BoggleActivity"
             android:exported="false" />
@@ -21,9 +22,6 @@
             android:exported="false" />
         <activity
             android:name=".assignment4.cintent.CriminalIntentActivity"
-            android:exported="false" />
-        <activity
-            android:name=".assignment3.geoquiz.CheatActivity"
             android:exported="false" />
         <activity
             android:name=".assignment3.geoquiz.CheatActivity"
@@ -47,7 +45,7 @@
             android:name=".assignment2.Calc1Activity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".buotg.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
