--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".buotg.BUOTGApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,9 +22,6 @@
             android:exported="false" />
         <activity
             android:name=".assignment4.cintent.CriminalIntentActivity"
-            android:exported="false" />
-        <activity
-            android:name=".assignment3.geoquiz.CheatActivity"
             android:exported="false" />
         <activity
             android:name=".assignment3.geoquiz.CheatActivity"
