--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,11 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
