add html parser

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,5 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.1'
     implementation 'androidx.room:room-ktx:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
+    implementation 'org.jsoup:jsoup:1.15.4'
 }
