--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".buotg.BUOTGApplication"
         android:allowBackup="true"
@@ -12,6 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS501App"
         tools:targetApi="31">
+        <activity
+            android:name=".buotg.user_setup.SetupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".example.WebViewDemo"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".example.PictureExample"
             android:exported="true" />
@@ -50,8 +67,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
