--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.CS501App"
         tools:targetApi="31">
         <activity
-            android:name=".buotg.user_setup.SetupActivity"
+            android:name=".buotg.view.user_setup.SetupActivity"
             android:exported="false" />
         <activity
             android:name=".example.WebViewDemo"
