--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.CS501App"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".buotg.view.user_setup.SetupActivity"
