--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".buotg.view.user_invite.InviteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".buotg.view.user_group.StudyGroupActivity"
+            android:exported="false" />
+        <activity
             android:name=".buotg.view.user_setting.SettingActivity"
             android:exported="false" />
         <activity
