--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'org.jsoup:jsoup:1.15.4'
+    implementation("androidx.navigation:navigation-compose:2.5.3")
 }
