--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,5 +92,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'org.jsoup:jsoup:1.15.4'
+    
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
     implementation("androidx.navigation:navigation-compose:2.5.3")
 }
