--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:theme="@style/Theme.CS501App"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity android:name=".buotg.view.user_map.mapActivity"
+            android:exported="false" />
         <activity
             android:name=".buotg.view.user_invite.InviteActivity"
             android:exported="false" />
