--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,5 @@ dependencies {
     
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
     implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
