--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 rootProject.name = "CS501App"
