--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,16 @@ plugins {
     id "kotlin-android"
     id "kotlin-android-extensions"
     id 'org.jetbrains.kotlin.kapt'
-
-
 }
 
 android {
     namespace 'com.cs501.cs501app'
-    compileSdk 33
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.cs501.cs501app"
-        minSdk 26
-        targetSdk 33
+        minSdkVersion 26
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         kapt {
@@ -49,6 +47,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerVersion '1.4.32'
     }
 }
 
@@ -96,4 +95,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
     implementation("androidx.navigation:navigation-compose:2.5.3")
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    //chat_room
+    implementation "io.getstream:stream-chat-android-ui-components:4.8.1"
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.0'
+
+//    implementation 'com.google.android.exoplayer:exoplayer:2.18.6'
+
 }
