--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.CS501App"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity android:name=".buotg.view.user_map.mapActivity"
+        <activity android:name=".buotg.view.user_map.MapViewActivity"
             android:exported="false" />
         <activity
             android:name=".buotg.view.user_invite.InviteActivity"
