--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:name=".buotg.view.user_setting.SettingActivity"
             android:exported="false" />
         <activity
-            android:name=".buotg.view.homeScreen.SharedEventActivity"
+            android:name=".buotg.view.homeScreen.sharedEvent.SharedEventActivity"
             android:exported="false" />
         <activity
             android:name=".buotg.view.user_setup.SetupActivity"
